# Sudoku-Madness

./: .gitignore  CMakeLists.txt  README.md  SudokuMadness.pro  SudokuMadnessQT.pro  resource.qrc  starter.cpp
data/: boards.txt
domain/: GameState.cpp  GameState.h  SudokuBoard.cpp  SudokuBoard.h  SudokuBoardFactory.h
generators/: BacktrackingSudokuGenerator.cpp  SudokuGenerator.cpp  SudokuGenerator.h  SudokuUniqueChecker.cpp  SudokuUniqueChecker.h
gui/delegate/: SudokuBoardDelegate.cpp  SudokuBoardDelegate.h
gui/helper_widgets/chronometer/: chronoui.cpp  chronoui.h
gui/helper_widgets/dialog/: difficultydialog.cpp  difficultydialog.h  difficultydialog.ui
gui/model/: GUIModel.cpp  GUIModel.h
gui/window/: MainWindow.cpp  MainWindow.h  mainwindow.ui
repository/: SudokuRepository.cpp  SudokuRepository.h
service/bombs/: BoardBomb.h  BoardBombGrenade.cpp  BoardBombGrenade.h  BoardBombLine.cpp  BoardBombLine.h  BoardBombMissile.cpp  BoardBombMissile.h
service/factory/: SudokuBoardFactory.cpp  SudokuBoardFactory.h
service/game_service/money_service/: CoinService.cpp  CoinService.h
service/game_service/sudoku_service/: SudokuBoardService.cpp  SudokuBoardService.h
service/generators/: BacktrackingSudokuGenerator.cpp  BacktrackingSudokuGenerator.h  SudokuGenerator.h  SudokuUniqueChecker.cpp  SudokuUniqueChecker.h
testing/: Tester.cpp  Tester.h
testing/data/: testing_data.txt
